--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,15 +1,37 @@
 version: '3.1'
 services:
   stats-server:
+    build: ./stats-service/service
+    image: service-image
+    container_name: stats-service-container
     ports:
       - "9090:9090"
+    depends_on:
+      - stats-db
+    environment:
+      - SPRING_DATASOURCE_URL=jdbc:postgresql://stats-db:5432/stats-db
+      - SPRING_DATASOURCE_USER=admin
+      - SPRING_DATASOURCE_PASSWORD=admin
+      - SERVER_PORT=9090
 
   stats-db:
-    image: postgres:14-alpine
-
-  ewm-service:
+    image: postgres:16.1
+    container_name: stats-db-container
     ports:
-      - "8080:8080"
+      - "5432:5432"
+    environment:
+      - POSTGRES_USER=admin
+      - POSTGRES_PASSWORD=admin
+      - POSTGRES_DB=stats-db
+    volumes:
+      - db-data:/var/lib/postgresql/data
 
-  ewm-db:
-    image: postgres:14-alpine
+volumes:
+  db-data:
+
+#  ewm-service:
+#    ports:
+#      - "8080:8080"
+#
+#  ewm-db:
+#    image: postgres:14-alpine
