--- a/stats-service/service/src/main/resources/application.properties
+++ b/stats-service/service/src/main/resources/application.properties
@@ -10,8 +10,8 @@ logging.level.org.springframework.orm.jpa.JpaTransactionManager=DEBUG
 #---
 spring.datasource.url=${SPRING_DATASOURCE_URL:jdbc:postgresql://localhost:5434/postgres}
 spring.datasource.driverClassName=${SPRING_DRIVER_CLASS_NAME:org.postgresql.Driver}
-spring.datasource.username=${SPRING_DATASOURCE_USERNAME:postgres}
-spring.datasource.password=${SPRING_DATASOURCE_PASSWORD:iamroot}
+spring.datasource.username=${SPRING_DATASOURCE_USERNAME:admin}
+spring.datasource.password=${SPRING_DATASOURCE_PASSWORD:admin}
 spring.jpa.show-sql=false
 #---
 spring.config.activate.on-profile=ci,test
