--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: '3.1'
 services:
   stats-server:
     build: ./stats-service/service
-    image: service-image
+    image: stats-service-image
     container_name: stats-service-container
     ports:
       - "9090:9090"
@@ -24,14 +24,38 @@ services:
       - POSTGRES_PASSWORD=admin
       - POSTGRES_DB=stats-db
     volumes:
-      - db-data:/var/lib/postgresql/data
+      - stats-db-data:/var/lib/postgresql/data
+
+
+  ewm-service:
+    ports:
+      - "8080:8080"
+    build: ./main-service
+    image: ewm-main-image
+    container_name: ewm-main-container
+    depends_on:
+      - ewm-db
+      - stats-server
+    environment:
+      - SPRING_DRIVER_CLASS_NAME=org.postgresql.Driver
+      - SPRING_DATASOURCE_URL=jdbc:postgresql://ewm-db:5432/main-db
+      - SPRING_DATASOURCE_USERNAME=admin
+      - SPRING_DATASOURCE_PASSWORD=admin
+      - SERVER_PORT=8080
+      - STATS_URL=http://stats-server:9090/
+
+  ewm-db:
+    image: postgres:16.1
+    container_name: ewm-db-container
+    ports:
+      - "5433:5432"
+    environment:
+      - POSTGRES_USER=admin
+      - POSTGRES_PASSWORD=admin
+      - POSTGRES_DB=main-db
+    volumes:
+      - ewm-db-data:/var/lib/postgresql/data
 
 volumes:
-  db-data:
-
-#  ewm-service:
-#    ports:
-#      - "8080:8080"
-#
-#  ewm-db:
-#    image: postgres:14-alpine
+  ewm-db-data:
+  stats-db-data:
