--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,6 +13,7 @@ services:
       - SPRING_DATASOURCE_USER=admin
       - SPRING_DATASOURCE_PASSWORD=admin
       - SERVER_PORT=9090
+    restart: on-failure
 
   stats-db:
     image: postgres:16.1
@@ -43,6 +44,7 @@ services:
       - SPRING_DATASOURCE_PASSWORD=admin
       - SERVER_PORT=8080
       - STATS_URL=http://stats-server:9090/
+    restart: on-failure
 
   ewm-db:
     image: postgres:16.1
